--- a/apps/source/live/Makefile
+++ b/apps/source/live/Makefile
@@ -15,8 +15,8 @@
 #    address of your Roku box. (e.g. export ROKU_DEV_TARGET=192.168.1.1.
 #    Set in your this variable in your shell startup (e.g. .bashrc)
 ##########################################################################
-APPNAME = live
-VERSION = 1.0
+APPNAME = newspring-public
+VERSION = 2.0
 
 ZIP_EXCLUDE= -x xml/* -x artwork/*
 
